compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__consts__literal_nil_does_not_get_constant_annotation.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/consts.rs
assertion_line: 121
expression: pub const a = Nil
snapshot_kind: text
---
----- SOURCE CODE
pub const a = Nil

----- COMPILED JAVASCRIPT
export const a = undefined;
